newtype-tools/tests/newtype-fail/enum.stderr
error: expected `struct Newtype(inner_type)`
 --> tests/newtype-fail/enum.rs:2:1
  |
2 | enum Enum {}
  | ^^^^
